# amoebius

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  ac.sh  amoebius.txt  amoebloctl  get_repo_txt.sh  notes.txt  pyproject.toml  refactor_providers.sh  run.sh  setup.sh
DEVELOPMENT_PLAN/: README.md  development_plan_standards.md  later_phases.md  legacy_tracking_for_deletion.md  overview.md  phase_00_documentation_suite.md  phase_01_bootstrap_kernel_kind.md  phase_01_formal_first_dsl_integrity.md  phase_01_toolchain_spike.md  phase_02_bootstrap_kernel_kind.md  phase_02_formal_model_kernel.md  phase_02_platform_services_storage_vault.md  phase_03_dsl_control_plane_singleton.md  phase_03_gateway_migration_model.md  phase_03_platform_services_storage_vault.md  phase_04_dhall_gate1_schema.md  phase_04_dsl_control_plane_singleton.md  phase_04_pulsar_content_store_workflow.md  phase_05_determinism_infernix.md  phase_05_gadt_decoder_gate2.md  phase_05_pulsar_content_store_workflow.md  phase_06_determinism_infernix.md  phase_06_illegal_state_corpus.md  phase_06_jitml_ha_coordinator.md  phase_07_capacity_core_folds.md  phase_07_capacity_topology_folds.md  phase_07_host_compute_daemons.md  phase_07_jitml_ha_coordinator.md  phase_08_capability_binder.md  phase_08_host_compute_daemons.md  phase_08_mattandjames_app_logic.md  phase_08_storage_geometry_folds.md  phase_09_execution_accelerator_folds.md  phase_09_multicluster_spawn_georeplication.md  phase_09_render_manifest_goldens.md  phase_10_capability_bind.md  phase_10_chain_kernel_dryrun.md  phase_10_provider_clusters_provisioning.md  phase_11_boundary_fake_tool_harness.md  phase_11_provision_seal.md  (+82 more)
docker/: Dockerfile  build_and_push_image.sh  build_images.sh  docker-compose.yaml  pyproject.toml  run_amoebius_standalone.sh  start.sh
docker/amoebius/: Dockerfile  pyproject.toml  start.sh
docs/: .gitkeep  index.html
documents/: README.md  documentation_standards.md
minikube/: main.tf  outputs.tf  terraform.tfvars  variables.tf
(+310 files in other folders)
