[tool.poetry]
name = "amoebius"
version = "0.0.1"
description = "A brief description of your project."
authors = ["tuee22"]

packages = [
  { include = "amoebius" , from="python"}
]

[tool.poetry.scripts]
amoebctl = "amoebius.cli.amoebctl:main"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = ">=4.0.0,<5.0.0"
dask = {extras = ["complete"], version = ">=2023.9.0,<2024.0.0"}
cryptography = ">=41.0.0,<42.0.0"
aiohttp = ">=3.8.0,<4.0.0"
mypy = ">=1.12.0,<2.0.0"
pydantic = { version = ">=2.9.0,<3.0.0", extras = ["mypy"] }
pydantic_settings = ">=2.7.1,<3.0.0"
PyYAML = ">=6.0.2,<7.0.0"
types-PyYAML = ">=6.0.12,<7.0.0"
black = ">=24.10.0,<25.0.0"
aiofiles = ">=24.1.0,<25.0.0"
types-aiofiles = ">=24.1.0,<25.0.0"
pandas = ">=2.2.3,<3.0.0"
pandas-stubs = ">=2.2.3,<3.0.0"
minio = ">=7.2.15,<8.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"