[tool.poetry]
name = "amoebius"
version = "0.0.1"
description = "A brief description of your project."
authors = ["tuee22"]

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = ">=4.0.0,<5.0.0"
dask = {extras = ["complete"], version = ">=2023.9.0,<2024.0.0"}
cryptography = ">=41.0.0,<42.0.0"
aiohttp = ">=3.8.0,<4.0.0"
# Add other dependencies as needed

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"